/*
 * MIT License (c)
 *
 * This work is licensed under the MIT License. To view a copy of this
 * license, visit
 *
 *      https://opensource.org/licenses/MIT
 *
 * Author: Blair Butterworth
 */

apply plugin: 'idea'

idea {
  project {
    jdkName = '1.8'
    languageLevel = '1.8'
    vcs = 'Git'
    modules -= project.idea.module
  }
}

Properties props = new Properties()
props.load(new FileInputStream("$project.rootDir/database.properties"))
props.each { prop -> project.ext.set(prop.key, prop.value) }

allprojects {
  repositories {
    mavenCentral()
    jcenter()
  }
}

subprojects {
  plugins.withType(JavaPlugin) {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
  }

  plugins.withType(IdeaPlugin) {
    idea {
      module {
        downloadSources = true

        sourceDirs += file('src/main/java')
        testSourceDirs += file('src/test/java')

        excludeDirs += file('config')
        excludeDirs += file('build')
        excludeDirs += file('bin')
        excludeDirs += file('.gradle')
        excludeDirs += file('.settings')
      }
    }

    afterEvaluate {
      rootProject.idea.project.modules += project.idea.module
    }
  }
}

task cleanIdeaForced(type: Delete) {
  delete fileTree(dir: '.idea' , include: '**/*')
  delete fileTree(dir: "${projectDir}" , include: '**/*.iml')
  delete fileTree(dir: "${projectDir}" , include: '**/*.ipr')
}
project.tasks.cleanIdea.dependsOn cleanIdeaForced
